Add comparison matrix

--- a/lol_final.ipynb
+++ b/lol_final.ipynb
@@ -2818,6 +2818,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 데이터간, 모델간 Best 비교"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmp = pd.DataFrame([[.0, .0, .0, .0], [.0, .0, .0, .0], [.0, .0, .0, .0], [.0, .0, .0, .0]], columns=[0, 0, 0, 0], index=[0, 0, 0, 0], dtype=float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmp.columns = [\"Train Acc\", \"Train Loss\", \"Validation Acc\", \"Validation Loss\"]\n",
+    "cmp.index = [\"256 * 256 without Lane Data\", \"Many layers without Lane Data\", \"256 * 256 with Lane Data\", \"Many layers with Lane Data\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmp.loc[\"256 * 256 without Lane Data\"]['Train Acc'] = max(history.history['accuracy'])\n",
+    "cmp.loc[\"256 * 256 without Lane Data\"]['Train Loss'] = min(history.history['loss'])\n",
+    "cmp.loc[\"256 * 256 without Lane Data\"]['Validation Acc'] = max(history.history['val_accuracy'])\n",
+    "cmp.loc[\"256 * 256 without Lane Data\"]['Validation Loss'] = min(history.history['val_loss'])\n",
+    "\n",
+    "cmp.loc[\"Many layers without Lane Data\"]['Train Acc'] = max(history_many_layer.history['accuracy'])\n",
+    "cmp.loc[\"Many layers without Lane Data\"]['Train Loss'] = min(history_many_layer.history['loss'])\n",
+    "cmp.loc[\"Many layers without Lane Data\"]['Validation Acc'] = max(history_many_layer.history['val_accuracy'])\n",
+    "cmp.loc[\"Many layers without Lane Data\"]['Validation Loss'] = min(history_many_layer.history['val_loss'])\n",
+    "\n",
+    "cmp.loc[\"256 * 256 with Lane Data\"]['Train Acc'] = max(history2.history['accuracy'])\n",
+    "cmp.loc[\"256 * 256 with Lane Data\"]['Train Loss'] = min(history2.history['loss'])\n",
+    "cmp.loc[\"256 * 256 with Lane Data\"]['Validation Acc'] = max(history2.history['val_accuracy'])\n",
+    "cmp.loc[\"256 * 256 with Lane Data\"]['Validation Loss'] = min(history2.history['val_loss'])\n",
+    "\n",
+    "cmp.loc[\"Many layers with Lane Data\"]['Train Acc'] = max(history2_many_layer.history['accuracy'])\n",
+    "cmp.loc[\"Many layers with Lane Data\"]['Train Loss'] = min(history2_many_layer.history['loss'])\n",
+    "cmp.loc[\"Many layers with Lane Data\"]['Validation Acc'] = max(history2_many_layer.history['val_accuracy'])\n",
+    "cmp.loc[\"Many layers with Lane Data\"]['Validation Loss'] = min(history2_many_layer.history['val_loss'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Train Acc</th>\n",
+       "      <th>Train Loss</th>\n",
+       "      <th>Validation Acc</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>256 * 256 without Lane Data</th>\n",
+       "      <td>0.781937</td>\n",
+       "      <td>0.453811</td>\n",
+       "      <td>0.773640</td>\n",
+       "      <td>0.460916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Many layers without Lane Data</th>\n",
+       "      <td>0.780206</td>\n",
+       "      <td>0.458402</td>\n",
+       "      <td>0.779488</td>\n",
+       "      <td>0.456830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256 * 256 with Lane Data</th>\n",
+       "      <td>0.785034</td>\n",
+       "      <td>0.449946</td>\n",
+       "      <td>0.787336</td>\n",
+       "      <td>0.441871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Many layers with Lane Data</th>\n",
+       "      <td>0.783707</td>\n",
+       "      <td>0.453890</td>\n",
+       "      <td>0.786181</td>\n",
+       "      <td>0.445400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Train Acc  Train Loss  Validation Acc  \\\n",
+       "256 * 256 without Lane Data     0.781937    0.453811        0.773640   \n",
+       "Many layers without Lane Data   0.780206    0.458402        0.779488   \n",
+       "256 * 256 with Lane Data        0.785034    0.449946        0.787336   \n",
+       "Many layers with Lane Data      0.783707    0.453890        0.786181   \n",
+       "\n",
+       "                               Validation Loss  \n",
+       "256 * 256 without Lane Data           0.460916  \n",
+       "Many layers without Lane Data         0.456830  \n",
+       "256 * 256 with Lane Data              0.441871  \n",
+       "Many layers with Lane Data            0.445400  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 게임이 끝난 후 데이터와 비교"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
