add challenger data

--- a/lol_final.ipynb
+++ b/lol_final.ipynb
@@ -4218,6 +4218,510 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 성능이 제일 좋았던 모델로 챌린저 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = pd.read_csv('./lolChaltest.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>gameId</th>\n",
+       "      <th>blueWins</th>\n",
+       "      <th>blueTotalGolds</th>\n",
+       "      <th>blueCurrentGolds</th>\n",
+       "      <th>blueTotalLevel</th>\n",
+       "      <th>blueAvgLevel</th>\n",
+       "      <th>blueTotalMinionKills</th>\n",
+       "      <th>blueTotalJungleMinionKills</th>\n",
+       "      <th>blueFirstBlood</th>\n",
+       "      <th>...</th>\n",
+       "      <th>redTopGold</th>\n",
+       "      <th>redMidGold</th>\n",
+       "      <th>redJugGold</th>\n",
+       "      <th>redSupGold</th>\n",
+       "      <th>redAdGold</th>\n",
+       "      <th>redTopXp</th>\n",
+       "      <th>redMidXp</th>\n",
+       "      <th>redJugXp</th>\n",
+       "      <th>redSupXp</th>\n",
+       "      <th>redAdXp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4247263043</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23095</td>\n",
+       "      <td>2540</td>\n",
+       "      <td>44</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>297</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4913</td>\n",
+       "      <td>6128</td>\n",
+       "      <td>5787</td>\n",
+       "      <td>5044</td>\n",
+       "      <td>5244</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4247155821</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22654</td>\n",
+       "      <td>2874</td>\n",
+       "      <td>43</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>365</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5326</td>\n",
+       "      <td>5771</td>\n",
+       "      <td>4856</td>\n",
+       "      <td>2804</td>\n",
+       "      <td>4560</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4243963257</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21300</td>\n",
+       "      <td>1300</td>\n",
+       "      <td>39</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>280</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5588</td>\n",
+       "      <td>6757</td>\n",
+       "      <td>6100</td>\n",
+       "      <td>5356</td>\n",
+       "      <td>7680</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4241678498</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22105</td>\n",
+       "      <td>3230</td>\n",
+       "      <td>44</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>348</td>\n",
+       "      <td>92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5047</td>\n",
+       "      <td>5535</td>\n",
+       "      <td>4333</td>\n",
+       "      <td>4021</td>\n",
+       "      <td>6311</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4241538868</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25766</td>\n",
+       "      <td>2251</td>\n",
+       "      <td>42</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>355</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4159</td>\n",
+       "      <td>4409</td>\n",
+       "      <td>5990</td>\n",
+       "      <td>4246</td>\n",
+       "      <td>5226</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25612</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4143231833</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24507</td>\n",
+       "      <td>1207</td>\n",
+       "      <td>43</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>278</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5010</td>\n",
+       "      <td>4412</td>\n",
+       "      <td>6087</td>\n",
+       "      <td>3695</td>\n",
+       "      <td>5397</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25613</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4157911901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53845</td>\n",
+       "      <td>6820</td>\n",
+       "      <td>59</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>309</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10184</td>\n",
+       "      <td>10912</td>\n",
+       "      <td>9971</td>\n",
+       "      <td>14247</td>\n",
+       "      <td>12860</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25614</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3764171638</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24119</td>\n",
+       "      <td>3884</td>\n",
+       "      <td>45</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>329</td>\n",
+       "      <td>71</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4812</td>\n",
+       "      <td>6738</td>\n",
+       "      <td>4701</td>\n",
+       "      <td>4225</td>\n",
+       "      <td>3731</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25615</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4110201724</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22978</td>\n",
+       "      <td>2968</td>\n",
+       "      <td>43</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>313</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4469</td>\n",
+       "      <td>4498</td>\n",
+       "      <td>4424</td>\n",
+       "      <td>3501</td>\n",
+       "      <td>4319</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25616</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4100240254</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25470</td>\n",
+       "      <td>3610</td>\n",
+       "      <td>45</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>356</td>\n",
+       "      <td>73</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4167</td>\n",
+       "      <td>3506</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>2912</td>\n",
+       "      <td>5143</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>25617 rows × 72 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0      gameId  blueWins  blueTotalGolds  blueCurrentGolds  \\\n",
+       "0               0  4247263043         0           23095              2540   \n",
+       "1               0  4247155821         1           22654              2874   \n",
+       "2               0  4243963257         0           21300              1300   \n",
+       "3               0  4241678498         0           22105              3230   \n",
+       "4               0  4241538868         1           25766              2251   \n",
+       "...           ...         ...       ...             ...               ...   \n",
+       "25612           0  4143231833         0           24507              1207   \n",
+       "25613           0  4157911901         0           53845              6820   \n",
+       "25614           0  3764171638         0           24119              3884   \n",
+       "25615           0  4110201724         1           22978              2968   \n",
+       "25616           0  4100240254         1           25470              3610   \n",
+       "\n",
+       "       blueTotalLevel  blueAvgLevel  blueTotalMinionKills  \\\n",
+       "0                  44           8.8                   297   \n",
+       "1                  43           8.6                   365   \n",
+       "2                  39           7.8                   280   \n",
+       "3                  44           8.8                   348   \n",
+       "4                  42           8.4                   355   \n",
+       "...               ...           ...                   ...   \n",
+       "25612              43           8.6                   278   \n",
+       "25613              59          11.8                   309   \n",
+       "25614              45           9.0                   329   \n",
+       "25615              43           8.6                   313   \n",
+       "25616              45           9.0                   356   \n",
+       "\n",
+       "       blueTotalJungleMinionKills  blueFirstBlood  ...  redTopGold  \\\n",
+       "0                              74               0  ...        4913   \n",
+       "1                              56               0  ...        5326   \n",
+       "2                              62               0  ...        5588   \n",
+       "3                              92               0  ...        5047   \n",
+       "4                              58               0  ...        4159   \n",
+       "...                           ...             ...  ...         ...   \n",
+       "25612                          65               0  ...        5010   \n",
+       "25613                          24               0  ...       10184   \n",
+       "25614                          71               0  ...        4812   \n",
+       "25615                          64               0  ...        4469   \n",
+       "25616                          73               0  ...        4167   \n",
+       "\n",
+       "       redMidGold  redJugGold  redSupGold  redAdGold  redTopXp  redMidXp  \\\n",
+       "0            6128        5787        5044       5244        10        10   \n",
+       "1            5771        4856        2804       4560        10        11   \n",
+       "2            6757        6100        5356       7680        10        10   \n",
+       "3            5535        4333        4021       6311        10        10   \n",
+       "4            4409        5990        4246       5226         9        10   \n",
+       "...           ...         ...         ...        ...       ...       ...   \n",
+       "25612        4412        6087        3695       5397         9        10   \n",
+       "25613       10912        9971       14247      12860        11        11   \n",
+       "25614        6738        4701        4225       3731        10        11   \n",
+       "25615        4498        4424        3501       4319        10        10   \n",
+       "25616        3506        3598        2912       5143         9         8   \n",
+       "\n",
+       "      redJugXp  redSupXp  redAdXp  \n",
+       "0            9         8        8  \n",
+       "1            9         7        9  \n",
+       "2            8         9        9  \n",
+       "3            9         8        9  \n",
+       "4            9         8        8  \n",
+       "...        ...       ...      ...  \n",
+       "25612        9         7        9  \n",
+       "25613       13        13       12  \n",
+       "25614        9         8        8  \n",
+       "25615        8         7        7  \n",
+       "25616        7         6        9  \n",
+       "\n",
+       "[25617 rows x 72 columns]"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Blue 승리를 레이블로 사용 blue팀 승리 : 1, red팀 승리 : 0\n",
+    "df3_y = df3['blueWins']  \n",
+    "df3_x = df3.drop(['Unnamed: 0', 'blueWins', 'redWins'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python37_64\\lib\\site-packages\\ipykernel_launcher.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  from ipykernel import kernelapp as app\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python37_64\\lib\\site-packages\\ipykernel_launcher.py:21: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python37_64\\lib\\site-packages\\ipykernel_launcher.py:19: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python37_64\\lib\\site-packages\\ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python37_64\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python37_64\\lib\\site-packages\\ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n",
+      "c:\\program files (x86)\\microsoft visual studio\\shared\\python37_64\\lib\\site-packages\\ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  if sys.path[0] == '':\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3_x = preprocessing_dragon(df3_x, team='blue')\n",
+    "df3_x = preprocessing_dragon(df3_x, team='red')\n",
+    "df3_x = preprocessing_tower(df3_x, team='blue')\n",
+    "df3_x = preprocessing_tower(df3_x, team='red')\n",
+    "\n",
+    "mm_train3_x = mms.fit_transform(df3_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "801/801 [==============================] - 3s 4ms/step - loss: 0.4513 - accuracy: 0.7886\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.45125165581703186, 0.788616955280304]"
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model2.evaluate(mm_train3_x.reshape(-1, 1, num_features), df3_y)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
